update on visuo 101124

--- a/www/styles.css
+++ b/www/styles.css
@@ -73,7 +73,7 @@
 	  border-radius: 5px;
 	  padding: 10px;
 }
-#C1 {
+/*#C1 {
     font-size: 10px;
     width: 100px;
     color: #333333;
@@ -81,7 +81,7 @@
     overflow: auto;
 	  border-radius: 5px;
 	  padding: 10px;
-}
+}*/
 .MainCard{
   font-size: 30px;
     color: #077936;
