--- a/www/styles.css
+++ b/www/styles.css
@@ -1,16 +1,16 @@
-.myOutput {
-    font-size: 22px;
-    width: 350px;
-    background-color: #fff;
+#population {
+    font-size: 15px;
+    width: 250px;
+    background-color: #333333;
+    color: #ffffff;
     height: auto;
     overflow: auto;
 	  border-radius: 15px;
-	  margin-top: 10px;
-	  margin-bottom: 10px;
+	  padding: 10px;
 }
 #household {
-    font-size: 22px;
-    width: 350px;
+    font-size: 15px;
+    width: 250px;
     background-color: #333333;
     color: #ffffff;
     height: auto;
@@ -19,8 +19,8 @@
 	  padding: 10px;
 }
 #Mosquito_net {
-    font-size: 22px;
-    width: 350px;
+    font-size: 15px;
+    width: 250px;
     background-color: #333333;
     color: #ffffff;
     height: auto;
